--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+body {
+  background: #f5f2f2;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -11,6 +15,12 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+button[type="submit"],
+button[type="submit"] a {
+  background-color: rgb(8 128 88) !important;
+  color: #ffffff !important;
 }
 
 .App-header {
