Addition of better error handling and output

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,10 @@ button[type="submit"] a {
   color: #61dafb;
 }
 
+.errorMessage {
+  background-color: rgb(243 197 191) !important;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
